<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
<!--    	<ImageView 
    	android:id="@+id/logo" android:src="@drawable/ic_launcher"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_marginTop="50dip">
	</ImageView> -->
	<TextView  
	    android:text="@string/about_us"
	 	android:layout_marginLeft="30dip"
		android:textSize="20dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</TextView>
	<TextView  
	    android:text="@string/about1"
	 	android:layout_marginLeft="30dip"
		android:textSize="12dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</TextView>
	<TextView  
	    android:text="@string/about2"
	 	android:layout_marginLeft="30dip"
		android:textSize="12dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</TextView>
	<TextView 	
	    android:inputType="textUri" android:text="@string/uri"
		android:autoLink="web" android:layout_marginLeft="30dip"
		android:textSize="12dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</TextView>
	<TextView 
	    android:text="@string/version"
		android:layout_marginLeft="30dip" android:textSize="12dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
	</TextView>

</LinearLayout>