<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip" >
    
	<RelativeLayout 
	    android:id="@+id/editPanel"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true">
		<Button 
		    android:id="@+id/btnSend" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/send"
			android:onClick="onButtonClicksend" 
			android:layout_alignParentRight="true">
		</Button>
		<EditText 
		    android:id="@+id/sEditText" 
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:layout_toLeftOf="@+id/btnSend"
			android:inputType="text">
		</EditText>
		<CheckBox 
		    android:id="@+id/cbxHexView" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/hexview"
			android:layout_below="@id/sEditText"></CheckBox>
		<CheckBox 
		    android:id="@+id/cbxHexSend" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/hexsend"
			android:layout_below="@id/sEditText" 
			android:layout_toRightOf="@id/cbxHexView">
		</CheckBox>
		<CheckBox 
		    android:id="@+id/cbxNewLine" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/newline"
			android:layout_below="@id/cbxHexView" 
			android:layout_toRightOf="@id/cbxHexView">
		</CheckBox>
		<Button 
		    android:id="@+id/btnClear" 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/clear"
			android:layout_below="@id/btnSend" 
			android:onClick="onButtonClickclear"
			android:layout_alignParentRight="true">
		</Button>
	</RelativeLayout>
	<ScrollView 
	    android:id="@+id/mScrollView" 
		android:layout_width="fill_parent" 
		android:layout_height="match_parent"
		android:layout_above="@id/editPanel">
		<TextView 
		    android:id="@+id/sTextView" 
		    android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:layout_below="@+id/sEditText">
		</TextView>
	</ScrollView>
</LinearLayout>